@@ -3362,10 +3362,16 @@ cm_image (int arg)
             if (pathname == NULL) {
               sprintf (fullname, "%s.jpg", name_arg);
               if (access (fullname, R_OK) != 0) {
-                sprintf (fullname, "%s.gif", name_arg);
-                if (access (fullname, R_OK) != 0) {
-                  pathname = get_file_info_in_path (fullname,
-                                               include_files_path, &file_info);
+		  pathname = get_file_info_in_path (fullname,
+						    include_files_path,
+						    &file_info);
+		  if (pathname == NULL) {
+		    sprintf (fullname, "%s.gif", name_arg);
+		    if (access (fullname, R_OK) != 0) {
+		      pathname = get_file_info_in_path (fullname,
+							include_files_path,
+							&file_info);
+		    }
                 }
               }
             }
